fixed overflows on main and downloads page

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -295,7 +295,7 @@ body{
   grid-gap: 2rem;
   grid-template-areas: "left-column main-content right-column";
   grid-template-columns: fit-content(15%) auto fit-content(15%);
-  overflow-x: scroll;
+  overflow: auto;
 }
 .page-content a,.download-page a{
   text-decoration: none;
@@ -534,7 +534,7 @@ body{
   grid-gap: 2rem;
   grid-template-areas: "left-column main-content";
   grid-template-columns: fit-content(15%) auto;
-  overflow-x: scroll;
+  overflow: auto;
 }
 .download-page-content{
   grid-area: main-content;
